--- a/ingesta.ipynb
+++ b/ingesta.ipynb
@@ -33,15 +33,15 @@
    },
    "outputs": [],
    "source": [
-    "def get_convocatory_page(doc, letters_size, letters_font):\n",
+    "def get_call_page(doc, letters_size, letters_font):\n",
     "    \"\"\"\n",
     "    Function for obtaining a dictionary which stores at which page each section starts\n",
     "    \n",
     "    doc -> pdf document\n",
-    "    letter_size -> Size of the letters of the titles of the convocatories\n",
-    "    letters_font -> Font of the letters of the titles of the convocatories\n",
+    "    letter_size -> Size of the letters of the titles of the calls\n",
+    "    letters_font -> Font of the letters of the titles of the calls\n",
     "    \"\"\"\n",
-    "    convocatory_pages = {}\n",
+    "    call_pages = {}\n",
     "    \n",
     "    # iterate through all the lines of the text checking if the properties match with the ones of the subtitles indicating the begining of a section\n",
     "    for page_num, page in enumerate(doc, start=1): \n",
@@ -53,11 +53,11 @@
     "                    size = fragment[\"size\"]\n",
     "                    font = fragment[\"font\"]\n",
     "                    \n",
-    "                    # if we find one of this titles, we store the ID of the convocatory and store the page at which it starts\n",
+    "                    # if we find one of this titles, we store the ID of the call and store the page at which it starts\n",
     "                    if size==letters_size and  font==letters_font and \"HORIZON\" in fragment[\"text\"]: \n",
-    "                        convocatory_pages[fragment[\"text\"].split(\":\", 1)[0].strip()] = page_num\n",
+    "                        call_pages[fragment[\"text\"].split(\":\", 1)[0].strip()] = page_num\n",
     "\n",
-    "    return convocatory_pages"
+    "    return call_pages"
    ]
   },
   {
@@ -69,12 +69,12 @@
    },
    "outputs": [],
    "source": [
-    "def get_convocatory_text(doc, convocatory_pages, body_size):\n",
+    "def get_call_text(doc, call_pages, body_size):\n",
     "    \"\"\"\n",
-    "    Function for obtaining a dictionary which stores the text for each of the convocatories\n",
+    "    Function for obtaining a dictionary which stores the text for each of the calls\n",
     "\n",
     "    doc -> pdf document\n",
-    "    convocatory_pages -> dictionary whoch stores at which page each convocatory starts\n",
+    "    call_pages -> dictionary whoch stores at which page each call starts\n",
     "    header_size -> Size of the letters of the headers\n",
     "    header_font -> Font of the letters of the headers\n",
     "    foot_size -> Size of the letters of the foot\n",
@@ -82,15 +82,15 @@
     "    super_idx_size -> Size of the letters of the super indexes\n",
     "    super_idx_font -> Font of the letters of the foot\n",
     "    \"\"\"\n",
-    "    convocatory_pairs = list(zip(convocatory_pages.keys(), list(convocatory_pages.keys())[1:])) + [(list(convocatory_pages.keys())[-1], None)]\n",
-    "    convocatory_texts = {}\n",
+    "    call_pairs = list(zip(call_pages.keys(), list(call_pages.keys())[1:])) + [(list(call_pages.keys())[-1], None)]\n",
+    "    call_texts = {}\n",
     "\n",
-    "    for init_conv, final_conv in convocatory_pairs: # iterate through all the pages between to sections \n",
-    "        init_page = convocatory_pages[init_conv]\n",
-    "        final_page = convocatory_pages[final_conv] if final_conv is not None else len(doc)\n",
+    "    for init_call, final_call in call_pairs: # iterate through all the pages between to sections \n",
+    "        init_page = call_pages[init_call]\n",
+    "        final_page = call_pages[final_call] if final_call is not None else len(doc)\n",
     "\n",
     "        text = []\n",
-    "        inside_section = False # Variable for detecting if we are inside a convocaotry section \n",
+    "        inside_section = False # Variable for detecting if we are inside a call section \n",
     "\n",
     "        for page_num in range(init_page-1, final_page):\n",
     "            page = doc.load_page(page_num)\n",
@@ -103,39 +103,39 @@
     "                        font = fragment[\"font\"]\n",
     "                        text_content = fragment[\"text\"]\n",
     "\n",
-    "                        # Check if we are inside a convocatory section \n",
-    "                        if final_conv is None or init_conv in text_content:\n",
+    "                        # Check if we are inside a call section \n",
+    "                        if final_call is None or init_call in text_content:\n",
     "                            inside_section = True \n",
     "\n",
-    "                        elif final_conv in text_content  :\n",
+    "                        elif final_call in text_content  :\n",
     "                            inside_section = False\n",
     "\n",
-    "                        # store all the text at thos sections in case it is not a header of a foot page\n",
+    "                        # store all the text at those sections in case it is not a header of a foot page\n",
     "                        if size==body_size and inside_section:  # check that the text is part of the body\n",
     "                            text.append(fragment[\"text\"])\n",
     "\n",
     "        complete_text = \"\\n\".join(text)\n",
-    "        convocatory_texts[init_conv] = complete_text # store the text at the dictionary\n",
+    "        call_texts[init_call] = complete_text # store the text at the dictionary\n",
     "   \n",
-    "    return convocatory_texts"
+    "    return call_texts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "AIiM45gm58e0",
    "metadata": {
     "id": "AIiM45gm58e0"
    },
    "outputs": [],
    "source": [
-    "def get_df_convocatory(convocatory_texts):\n",
+    "def get_df_call(call_texts, programme):\n",
     "    \"\"\"\n",
-    "    Function for creating the dataset containing all the necessary data for each of the convocatories\n",
+    "    Function for creating the dataset containing all the necessary data for each of the calls\n",
     "\n",
-    "    convocatory_texts -> dictionary containing the text for each of the convocatories\n",
+    "    call_texts -> dictionary containing the text for each of the calls\n",
     "    \"\"\"\n",
-    "    df_conv = pd.DataFrame(columns=[\"Convocatory\", \"Budget\", \"Type of Action\", \"Expected Outcome\", \"Scope\"])\n",
+    "    df_call = pd.DataFrame(columns=[\"Work Programme\", \"Call\", \"Budget\", \"Type of Action\", \"Expected Outcome\", \"Scope\"])\n",
     "\n",
     "    # Budget section starts at The commission\" and ends at \"Indicative Budget\"\n",
     "    init_budget = \"The Commission\"\n",
@@ -167,7 +167,7 @@
     "    final_scope_3 = \"Destination\"\n",
     "    final_scope_4 = \"Other\"\n",
     "\n",
-    "    for conv, text in convocatory_texts.items(): # iterate through all convocatories texts\n",
+    "    for call, text in call_texts.items(): # iterate through all calls texts\n",
     "        budget = []\n",
     "        action = []\n",
     "        outcome = []            \n",
@@ -221,24 +221,25 @@
     "            budget = \"\".join(budget)\n",
     "\n",
     "        # store all the information ina  dictionary and create a dataset\n",
-    "        sections[\"Convocatory\"] = conv\n",
+    "        sections[\"Work Programme\"] = programme\n",
+    "        sections[\"Call\"] = call\n",
     "        sections[\"Budget\"] =  budget\n",
     "        sections[\"Type of Action\"] = \"\".join(action)\n",
     "        sections[\"Expected Outcome\"] = \"\".join(outcome).replace(\"Expected Outcome: \", \"\")\n",
     "        sections[\"Scope\"] = \"\".join(scope).replace(\"Scope: \", \"\")\n",
     "        sections = pd.DataFrame([sections])\n",
     "\n",
-    "        df_conv = pd.concat([df_conv, sections], ignore_index=True)\n",
+    "        df_call = pd.concat([df_call, sections], ignore_index=True)\n",
     "    \n",
     "    # remove the empty lines \n",
     "    index_to_delete = []\n",
-    "    for i in range(df_conv.shape[0]):\n",
-    "        if df_conv[\"Budget\"][i] == \"\" and df_conv[\"Type of Action\"][i] == \"\" and df_conv[\"Expected Outcome\"][i] == \"\"  and df_conv[\"Scope\"][i] == \"\":\n",
+    "    for i in range(df_call.shape[0]):\n",
+    "        if df_call[\"Budget\"][i] == \"\" and df_call[\"Type of Action\"][i] == \"\" and df_call[\"Expected Outcome\"][i] == \"\"  and df_call[\"Scope\"][i] == \"\":\n",
     "            index_to_delete.append(i)\n",
     "\n",
-    "    df_conv = df_conv.drop(index=index_to_delete, axis=0).reset_index(drop=True)\n",
+    "    df_call = df_call.drop(index=index_to_delete, axis=0).reset_index(drop=True)\n",
     "\n",
-    "    return df_conv"
+    "    return df_call"
    ]
   },
   {
@@ -258,12 +259,12 @@
     "id": "fae110be"
    },
    "source": [
-    "For obtainig the database, the first step is to obtain the pdf document and extract the different types of text (Destinations, calls and convocatories)."
+    "For obtainig the database, the first step is to obtain the pdf document and extract the different types of text (Destinations, calls and projects)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "ba34111a",
    "metadata": {
     "id": "ba34111a"
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "d38385fb",
    "metadata": {
     "id": "d38385fb"
@@ -301,37 +302,43 @@
    "outputs": [],
    "source": [
     "if LOOP:\n",
-    "    for program in programs:\n",
+    "    df = pd.DataFrame()\n",
+    "    for programme in programs:\n",
     "        # Open the document\n",
-    "        doc = fitz.open(path+program+\".pdf\")\n",
+    "        doc = fitz.open(path+programme+\".pdf\")\n",
     "\n",
     "        # Obtain a dictionary which stores at which page each section starts\n",
-    "        convocatory_pages = get_convocatory_page(doc, subtitle_size, subtitle_font)\n",
+    "        call_pages = get_call_page(doc, subtitle_size, subtitle_font)\n",
     "\n",
-    "        # Obtain a dictionary which stores the text for each convocatory\n",
-    "        convocatory_texts = get_convocatory_text(doc, convocatory_pages, body_size)\n",
+    "        # Obtain a dictionary which stores the text for each call\n",
+    "        call_texts = get_call_text(doc, call_pages, body_size)\n",
     "\n",
-    "        # Obtain the convocatory dataframe containing all information about each of the convocatories\n",
-    "        df_convocatory = get_df_convocatory(convocatory_texts)\n",
+    "        # Obtain the call dataframe containing all information about each of the calls\n",
+    "        df_call = get_df_call(call_texts, programme)\n",
+    "        \n",
+    "        df = pd.concat([df, df_call], ignore_index=True)\n",
+    "        \n",
     "\n",
     "        # Store the df as a csv document\n",
-    "        df_convocatory.to_parquet(program+\".parquet\", index=False)\n",
+    "        df.to_parquet(\"horizon_work_programmes.parquet\", index=False)\n",
     "        \n",
     "else:\n",
-    "    program = programs[1]\n",
+    "    programme = programs[1]\n",
     "    # Open the document\n",
-    "    doc = fitz.open(path+program+\".pdf\")\n",
+    "    doc = fitz.open(path+programme+\".pdf\")\n",
     "\n",
     "    # Obtain a dictionary which stores at which page each section starts\n",
-    "    convocatory_pages = get_convocatory_page(doc, subtitle_size, subtitle_font)\n",
+    "    call_pages = get_call_page(doc, subtitle_size, subtitle_font)\n",
     "\n",
-    "    # Obtain a dictionary which stores the text for each convocatory\n",
-    "    convocatory_texts = get_convocatory_text(doc, convocatory_pages, body_size)\n",
-    "    # Obtain the convocatory dataframe containing all information about each of the convocatories\n",
-    "    df_convocatory = get_df_convocatory(convocatory_texts)\n",
+    "    # Obtain a dictionary which stores the text for each call\n",
+    "    call_texts = get_call_text(doc, call_pages, body_size)\n",
+    "\n",
+    "    # Obtain the call dataframe containing all information about each of the calls\n",
+    "    df_call = get_df_call(call_texts, programme)\n",
     "    \n",
     "    # Store the df as a csv document\n",
-    "    df_convocatory.to_parquet(program+\".parquet\")\n",
+    "    # df_call.to_parquet(programme+\".parquet\", index=False)\n",
+    "\n",
     "    "
    ]
   }
