--- a/ingesta_EIC.ipynb
+++ b/ingesta_EIC.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "8b8ede8d",
    "metadata": {
     "id": "8b8ede8d"
@@ -26,26 +26,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "DL76-WMy0orv",
    "metadata": {
     "id": "DL76-WMy0orv"
    },
    "outputs": [],
    "source": [
-    "def get_convocatory_page(doc, letters_size, letters_font, letters_color, section):\n",
+    "def get_challenge_page(doc, letters_size, letters_font, letters_color, section):\n",
     "    \"\"\"\n",
     "    Function for obtaining a dictionary which stores at which page each section starts\n",
     "    \n",
     "    doc -> pdf document\n",
-    "    letter_size -> Size of the letters of the titles of the convocatories\n",
-    "    letters_font -> Font of the letters of the titles of the convocatories\n",
-    "    letters_color -> Color of the letters of the titles of the convocatories\n",
+    "    letter_size -> Size of the letters of the titles of the challenges\n",
+    "    letters_font -> Font of the letters of the titles of the challenges\n",
+    "    letters_color -> Color of the letters of the titles of the challenges\n",
     "    section -> Name of the section we are interested in\n",
     "    \"\"\"\n",
     "    # iterate through all the lines of the text checking if the properties match with the ones of the subtitles indicating the begining of a section\n",
     "    \n",
-    "    convocatory_pages = {}\n",
+    "    challenge_pages = {}\n",
     "    for page_num, page in enumerate(doc, start=1): \n",
     "        blocks = page.get_text(\"dict\")[\"blocks\"]\n",
     "\n",
@@ -56,47 +56,47 @@
     "                    font = fragment[\"font\"]\n",
     "                    color = fragment[\"color\"]\n",
     "\n",
-    "                    # if we find one of this titles, we store the ID of the convocatory and store the page at which it starts\n",
+    "                    # if we find one of this titles, we store the ID of the challenge and store the page at which it starts\n",
     "                    if size==letters_size and  font==letters_font and color==letters_color and section in fragment[\"text\"]: \n",
     "\n",
-    "                        # Check that the string is clean. If not remove the indicative number before the convocatory\n",
+    "                        # Check that the string is clean. If not remove the indicative number before the challenge\n",
     "                        if fragment[\"text\"].split()[0] == \"EIC\":   \n",
-    "                            convocatory_pages[fragment[\"text\"]] = page_num\n",
+    "                            challenge_pages[fragment[\"text\"]] = page_num\n",
     "                        else:\n",
     "                            splited_text = fragment[\"text\"].split()  \n",
-    "                            convocatory_pages[' '.join(splited_text[1:])] = page_num                            \n",
+    "                            challenge_pages[' '.join(splited_text[1:])] = page_num                            \n",
     "            \n",
-    "    return convocatory_pages"
+    "    return challenge_pages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "08248269",
    "metadata": {
     "id": "pV4gJe_y2YIJ"
    },
    "outputs": [],
    "source": [
-    "def get_convocatory_text(doc, convocatory_pages, body_size, body_font, subtitle_size, subtitle_font):\n",
+    "def get_challenge_text(doc, challenge_pages, body_size, body_font, subtitle_size, subtitle_font):\n",
     "    \"\"\"\n",
-    "    Function for obtaining a dictionary which stores the text for each of the convocatories\n",
+    "    Function for obtaining a dictionary which stores the text for each of the challenges\n",
     "\n",
-    "    convocatory_pages -> dictionary whoch stores at which page each convocatory starts\n",
+    "    challenge_pages -> dictionary whoch stores at which page each challenge starts\n",
     "    numpage_size -> Size of the letters of the page numbers\n",
     "    numpage_font -> Font of the letters of the page numbers\n",
     "    foot_size -> Size of the letters of the foot\n",
     "    foot_font -> Font of the letters of the foot\n",
     "    \"\"\"\n",
-    "    convocatory_pairs = list(zip(convocatory_pages.keys(), list(convocatory_pages.keys())[1:])) + [(list(convocatory_pages.keys())[-1], None)]\n",
-    "    convocatory_texts = {}\n",
+    "    challenge_pairs = list(zip(challenge_pages.keys(), list(challenge_pages.keys())[1:])) + [(list(challenge_pages.keys())[-1], None)]\n",
+    "    challenge_texts = {}\n",
     "\n",
-    "    for init_conv, final_conv in convocatory_pairs: # iterate through all the pages between to sections \n",
-    "        init_page = convocatory_pages[init_conv]\n",
-    "        final_page = convocatory_pages[final_conv] if final_conv is not None else len(doc)\n",
+    "    for init_challenge, final_challenge in challenge_pairs: # iterate through all the pages between to sections \n",
+    "        init_page = challenge_pages[init_challenge]\n",
+    "        final_page = challenge_pages[final_challenge] if final_challenge is not None else len(doc)\n",
     "\n",
     "        text = []\n",
-    "        inside_section = False # Variable for detecting if we are inside a convocatory section \n",
+    "        inside_section = False # Variable for detecting if we are inside a challenge section \n",
     "\n",
     "        for page_num in range(init_page-1, final_page):\n",
     "            page = doc.load_page(page_num)\n",
@@ -109,11 +109,11 @@
     "                        font = fragment[\"font\"]\n",
     "                        text_content = fragment[\"text\"]\n",
     "\n",
-    "                        # Check if we are inside a convocatory section \n",
-    "                        if final_conv is None or init_conv in text_content:\n",
+    "                        # Check if we are inside a challenge section \n",
+    "                        if final_challenge is None or init_challenge in text_content:\n",
     "                            inside_section = True \n",
     "\n",
-    "                        elif final_conv in text_content:\n",
+    "                        elif final_challenge in text_content:\n",
     "                            inside_section = False\n",
     "\n",
     "                        # store all the text at thos sections in case it is not a header of a foot page\n",
@@ -121,29 +121,29 @@
     "                            text.append(text_content)\n",
     "\n",
     "        complete_text = \"\\n\".join(text)\n",
-    "        convocatory_texts[init_conv] = complete_text # store the text at the dictionary\n",
+    "        challenge_texts[init_challenge] = complete_text # store the text at the dictionary\n",
     "\n",
     "\n",
     "   \n",
-    "    return convocatory_texts"
+    "    return challenge_texts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "AIiM45gm58e0",
    "metadata": {
     "id": "AIiM45gm58e0"
    },
    "outputs": [],
    "source": [
-    "def get_df_convocatory(convocatory_texts):\n",
+    "def get_df_challenge(challenge_texts, work_programme):\n",
     "    \"\"\"\n",
-    "    Function for creating the dataset containing all the necessary data for each of the convocatories\n",
+    "    Function for creating the dataset containing all the necessary data for each of the challenges\n",
     "\n",
-    "    convocatory_texts -> dictionary containing the text for each of the convocatories\n",
+    "    challenge_texts -> dictionary containing the text for each of the challenges\n",
     "    \"\"\"\n",
-    "    df_conv = pd.DataFrame(columns=[\"Challenge\", \"Background and Scope\", \"Overall Goal & Specific Objectives\", \"Expected Outcomes & Impacts\"])\n",
+    "    df_challenge = pd.DataFrame(columns=[\"Work Programme\", \"Challenge\", \"Background and Scope\", \"Overall Goal & Specific Objectives\", \"Expected Outcomes & Impacts\"])\n",
     "\n",
     "    # Scope section starts at \"Background and scope\" and ends at \"Overall goal and specific objectives\"\n",
     "    init_scope = \"Background and scope\"\n",
@@ -159,7 +159,7 @@
     "    final_outcome_1 = \"EIC\"\n",
     "    final_outcome_2 = \"Specific Conditions\"\n",
     "    \n",
-    "    for conv, text in convocatory_texts.items(): # iterate through all convocatories texts\n",
+    "    for challenge, text in challenge_texts.items(): # iterate through all challenges texts\n",
     "        scope = []\n",
     "        goal = []\n",
     "        outcome = []            \n",
@@ -196,16 +196,17 @@
     "            \n",
     "    \n",
     "        # store all the information in a dictionary and create a dataset\n",
-    "        sections[\"Challenge\"] = conv\n",
+    "        sections[\"Work Programme\"] = work_programme\n",
+    "        sections[\"Challenge\"] = challenge\n",
     "        sections[\"Background and Scope\"] = \"\".join(scope).replace(\"Background and scope\", \"\")\n",
     "        sections[\"Overall Goal & Specific Objectives\"] = \"\".join(goal).replace(\"Overall goal and specific objectives \", \"\")\n",
     "        sections[\"Expected Outcomes & Impacts\"] = \"\".join(outcome).replace(\"Expected outcomes and impacts \", \"\")\n",
     "\n",
     "        sections = pd.DataFrame([sections])\n",
     "\n",
-    "        df_conv = pd.concat([df_conv, sections], ignore_index=True)\n",
+    "        df_challenge = pd.concat([df_challenge, sections], ignore_index=True)\n",
     "    \n",
-    "    return df_conv"
+    "    return df_challenge"
    ]
   },
   {
@@ -225,19 +226,19 @@
     "id": "fae110be"
    },
    "source": [
-    "For obtainig the database, the first step is to obtain the pdf document and extract the different types of text (Destinations, calls and convocatories)."
+    "For obtainig the database, the first step is to obtain the pdf document and extract the different types of text (Destinations, calls and challenge)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "ba34111a",
    "metadata": {
     "id": "ba34111a"
    },
    "outputs": [],
    "source": [
-    "LOOP = False # Set to false in case just interested in one program\n",
+    "LOOP = True # Set to false in case just interested in one program\n",
     "\n",
     "# path = \"/Users/mbalairon/Desktop/Horizon/\"\n",
     "path = \"\"\n",
@@ -262,154 +263,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "52522204",
    "metadata": {},
    "outputs": [],
    "source": [
     "if LOOP:\n",
+    "    df = pd.DataFrame() # data frame for storing all the information\n",
+    "    \n",
     "    for section in sections:\n",
     "        # Open the document\n",
     "        doc = fitz.open(path+doc_name+\".pdf\")\n",
     "\n",
     "        # Obtain a dictionary which stores at which page each section starts\n",
-    "        convocatory_pages = get_convocatory_page(doc, title_size, title_font, title_color, section)\n",
+    "        challenge_pages = get_challenge_page(doc, title_size, title_font, title_color, section)\n",
     "\n",
-    "        # Obtain a dictionary which stores the text for each convocatory\n",
-    "        convocatory_texts = get_convocatory_text(doc, convocatory_pages, body_size, body_font, subtitle_size, subtitle_font)\n",
+    "        # Obtain a dictionary which stores the text for each challenge\n",
+    "        challenge_texts = get_challenge_text(doc, challenge_pages, body_size, body_font, subtitle_size, subtitle_font)\n",
     "\n",
-    "        # Obtain the convocatory dataframe containing all information about each of the convocatories\n",
-    "        df_convocatory = get_df_convocatory(convocatory_texts)\n",
-    "\n",
+    "        # Obtain the challenge dataframe containing all information about each of the challenges\n",
+    "        df_challenge = get_df_challenge(challenge_texts, section)\n",
+    "        \n",
+    "        # join to the orevious df\n",
+    "        df = pd.concat([df, df_challenge], ignore_index=True)\n",
+    "        \n",
     "        # save as csv\n",
-    "        df_convocatory.to_parquet(section+\".parquet\")\n",
+    "        df.to_parquet(\"EIC_work_programmes.parquet\")\n",
     "else:\n",
     "    # Open the document\n",
     "    doc = fitz.open(path+doc_name+\".pdf\")\n",
     "\n",
     "    # Obtain a dictionary which stores at which page each section starts\n",
-    "    convocatory_pages = get_convocatory_page(doc, title_size, title_font, title_color, section)\n",
+    "    challenge_pages = get_challenge_page(doc, title_size, title_font, title_color, section)\n",
     "\n",
-    "    # Obtain a dictionary which stores the text for each convocatory\n",
-    "    convocatory_texts = get_convocatory_text(doc, convocatory_pages, body_size, body_font, subtitle_size, subtitle_font)\n",
+    "    # Obtain a dictionary which stores the text for each challenge\n",
+    "    challenge_texts = get_challenge_text(doc, challenge_pages, body_size, body_font, subtitle_size, subtitle_font)\n",
     "\n",
-    "    # Obtain the convocatory dataframe containing all information about each of the convocatories\n",
-    "    df_convocatory = get_df_convocatory(convocatory_texts)\n",
+    "    # Obtain the challenge dataframe containing all information about each of the challenges\n",
+    "    df_challenge = get_df_challenge(challenge_texts, section)\n",
     "\n",
     "    # save as csv\n",
-    "    df_convocatory.to_parquet(section+\".parquet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "c3f2709e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Challenge</th>\n",
-       "      <th>Background and Scope</th>\n",
-       "      <th>Overall Goal &amp; Specific Objectives</th>\n",
-       "      <th>Expected Outcomes &amp; Impacts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>EIC Pathfinder Challenge: Clean and efficient ...</td>\n",
-       "      <td>Cooling is an essential process across many a...</td>\n",
-       "      <td>This EIC Pathfinder Challenge aims at advancin...</td>\n",
-       "      <td>Expected outcomes and impactsThe supported pro...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EIC Pathfinder Challenge: Architecture, Engine...</td>\n",
-       "      <td>Life cycle greenhouse gas (GHG) emissions of...</td>\n",
-       "      <td>The potential of the digitalised, mutually int...</td>\n",
-       "      <td>Expected outcomes and impacts  Projects must c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>EIC Pathfinder Challenge: Precision nutrition</td>\n",
-       "      <td>Dietary guidelines provide recommendations on...</td>\n",
-       "      <td>Overall goal and specific objectivesThe goal o...</td>\n",
-       "      <td>Expected outcomes and impactsUnderstanding and...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>EIC Pathfinder Challenge: Responsible electron...</td>\n",
-       "      <td>Responsible electronics represents a unique o...</td>\n",
-       "      <td>The overall goal of this Challenge is to creat...</td>\n",
-       "      <td>This Challenge is expected to contribute to th...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>EIC Pathfinder Challenge: In-space solar energ...</td>\n",
-       "      <td>Thermonuclear reactions in the Sun are practi...</td>\n",
-       "      <td>Overall goal and specific objectivesThe overal...</td>\n",
-       "      <td>Expected outcomes and impactsThis Challenge ai...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           Challenge  \\\n",
-       "0  EIC Pathfinder Challenge: Clean and efficient ...   \n",
-       "1  EIC Pathfinder Challenge: Architecture, Engine...   \n",
-       "2     EIC Pathfinder Challenge: Precision nutrition    \n",
-       "3  EIC Pathfinder Challenge: Responsible electron...   \n",
-       "4  EIC Pathfinder Challenge: In-space solar energ...   \n",
-       "\n",
-       "                                Background and Scope  \\\n",
-       "0   Cooling is an essential process across many a...   \n",
-       "1    Life cycle greenhouse gas (GHG) emissions of...   \n",
-       "2   Dietary guidelines provide recommendations on...   \n",
-       "3   Responsible electronics represents a unique o...   \n",
-       "4   Thermonuclear reactions in the Sun are practi...   \n",
-       "\n",
-       "                  Overall Goal & Specific Objectives  \\\n",
-       "0  This EIC Pathfinder Challenge aims at advancin...   \n",
-       "1  The potential of the digitalised, mutually int...   \n",
-       "2  Overall goal and specific objectivesThe goal o...   \n",
-       "3  The overall goal of this Challenge is to creat...   \n",
-       "4  Overall goal and specific objectivesThe overal...   \n",
-       "\n",
-       "                         Expected Outcomes & Impacts  \n",
-       "0  Expected outcomes and impactsThe supported pro...  \n",
-       "1  Expected outcomes and impacts  Projects must c...  \n",
-       "2  Expected outcomes and impactsUnderstanding and...  \n",
-       "3  This Challenge is expected to contribute to th...  \n",
-       "4  Expected outcomes and impactsThis Challenge ai...  "
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_convocatory"
+    "    # df_challenge.to_parquet(section+\".parquet\")"
    ]
   }
  ],
