new version removing unnecessary chunks

--- a/UC3M ResearchPortal/Research Portal Scraping.ipynb
+++ b/UC3M ResearchPortal/Research Portal Scraping.ipynb
@@ -302,13 +302,16 @@
     "    \n",
     "    # Conditional check and savings (Periodic backups)\n",
     "    if not n%100:\n",
-    "        with open(relative_path + 'outputs/researchers.json', 'w') as f:\n",
-    "            json.dump(researchers, f, indent=4)"
+    "        with open(relative_path + 'outputs/researchers.parquet', 'w') as f:\n",
+    "            parquet.dump(researchers, f, indent=4)\n",
+    "            \n",
+    "with open(relative_path + 'outputs/researchers.parquet', 'w') as f:\n",
+    "    parquet.dump(researchers, f, indent=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "b38beb76",
    "metadata": {},
    "outputs": [
@@ -477,38 +480,15 @@
     "        pass\n",
     "    \n",
     "    if not n%100:\n",
-    "        with open(relative_path + 'outputs/publications.json', 'w') as f:\n",
+    "        with open(relative_path + 'outputs/publications.parquet', 'w') as f:\n",
     "            json.dump(publications, f, indent=4)\n",
-    "        with open(relative_path + 'outputs/inv_pub.json', 'w') as f:\n",
+    "        with open(relative_path + 'outputs/inv_pub.parquet', 'w') as f:\n",
     "            json.dump(inv_pub, f, indent=4)\n",
     "            \n",
-    "with open(relative_path + 'outputs/publications.json', 'w') as f:\n",
-    "    json.dump(publications, f, indent=4)\n",
-    "with open(relative_path + 'outputs/inv_pub.json', 'w') as f:\n",
-    "    json.dump(inv_pub, f, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "6fbc3edf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'invID': '21578', 'pubID': '371443', 'orderID': 3},\n",
-       " {'invID': '35641', 'pubID': '371444', 'orderID': 2},\n",
-       " {'invID': '18070', 'pubID': '371444', 'orderID': 4}]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inv_pub"
+    "with open(relative_path + 'outputs/publications.parquet', 'w') as f:\n",
+    "    parquet.dump(publications, f, indent=4)\n",
+    "with open(relative_path + 'outputs/inv_pub.parquet', 'w') as f:\n",
+    "    parquet.dump(inv_pub, f, indent=4)"
    ]
   },
   {
@@ -630,123 +610,6 @@
     "                process(el, objType, author)\n",
     "    process(obj)\n",
     "    return resources, auth_res"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6ad57ba",
-   "metadata": {},
-   "source": [
-    "### Create tables to match author ID (invID) to resource ID (resID)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0495927d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DF researchers\n",
-    "with open(relative_path + 'outputs/researchers.json', 'r') as f:\n",
-    "    data = json.load(f)\n",
-    "    df_researchers = pd.json_normalize(data)\n",
-    "\n",
-    "df_researchers.columns = ['invID']+[cname.split('.')[-1].replace(' ', '_').lower() for cname in df_researchers.columns[1:]]\n",
-    "\n",
-    "# DF resources, DF auth-res\n",
-    "resources = []\n",
-    "auth_res = []\n",
-    "auth_res_publications = []\n",
-    "auth_res_projects = []\n",
-    "auth_res_others = []\n",
-    "\n",
-    "with open(relative_path + 'outputs/publications.json', 'r') as f:\n",
-    "    data = json.load(f)\n",
-    "res, a_r = process_json(data)\n",
-    "resources.extend(res)\n",
-    "auth_res.extend(a_r)\n",
-    "auth_res_publications.extend(a_r)\n",
-    "\n",
-    "# DF projects\n",
-    "with open(relative_path + 'outputs/projects.json', 'r') as f:\n",
-    "    data = json.load(f)\n",
-    "res, a_r = process_json(data)\n",
-    "resources.extend(res)\n",
-    "auth_res.extend(a_r)\n",
-    "auth_res_projects.extend(a_r)\n",
-    "\n",
-    "# DF Others\n",
-    "with open(relative_path + 'outputs/others.json', 'r') as f:\n",
-    "    data = json.load(f)\n",
-    "res, a_r = process_json(data)\n",
-    "resources.extend(res)\n",
-    "auth_res.extend(a_r)\n",
-    "auth_res_others.extend(a_r)\n",
-    "\n",
-    "df_resources = pd.DataFrame(resources)\n",
-    "df_resources = df_resources.drop_duplicates(subset='resID')\n",
-    "df_resources = df_resources[list(df_resources.columns[1:]) + [df_resources.columns[0]]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "228a22ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_auth_res = pd.DataFrame(auth_res, columns=['invID', 'resID'])\n",
-    "df_auth_res_publications = pd.DataFrame(auth_res_publications, columns=['invID', 'resID'])\n",
-    "df_auth_res_projects = pd.DataFrame(auth_res_projects, columns=['invID', 'resID'])\n",
-    "df_auth_res_others = pd.DataFrame(auth_res_others, columns=['invID', 'resID'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "95288532",
-   "metadata": {},
-   "source": [
-    "# Save as a CSV file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f761bf8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_researchers.to_csv(relative_path + 'outputs/researchers.csv', index=False)\n",
-    "df_resources.to_csv(relative_path + 'outputs/resources.csv', index=False)\n",
-    "\n",
-    "df_auth_res_publications.to_csv(relative_path + 'outputs/auth_res_publications.csv', index=False)\n",
-    "df_auth_res_projects.to_csv(relative_path + 'outputs/auth_res_projects.csv', index=False)\n",
-    "df_auth_res_others.to_csv(relative_path + 'outputs/auth_res_others.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be6f28db",
-   "metadata": {},
-   "source": [
-    "# Save as a parquet file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a01472fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_researchers.to_parquet(relative_path + 'outputs/researchers.parquet', index=False)\n",
-    "df_resources.to_parquet(relative_path + 'outputs/resources.parquet', index=False)\n",
-    "df_auth_res.to_parquet(relative_path + '/outputs/auth_res.parquet', index=False)\n",
-    "\n",
-    "df_auth_res_publications.to_parquet(relative_path + 'outputs/auth_res_publications.parquet', index=False)\n",
-    "df_auth_res_projects.to_parquet(relative_path + 'outputs/auth_res_projects.parquet', index=False)\n",
-    "df_auth_res_others.to_parquet(relative_path + 'outputs/auth_res_others.parquet', index=False)"
    ]
   },
   {
