--- a/UC3M ResearchPortal/Research Portal Scraping.ipynb
+++ b/UC3M ResearchPortal/Research Portal Scraping.ipynb
@@ -23,6 +23,8 @@
     "import requests\n",
     "import numpy as np\n",
     "import time\n",
+    "import pyarrow.parquet as pq\n",
+    "\n",
     "# import langid"
    ]
   },
@@ -79,7 +81,15 @@
    "execution_count": null,
    "id": "52b7014c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Researchers so far: 0 (10015)\r"
+     ]
+    }
+   ],
    "source": [
     "for idx in np.arange(10000, 50000): \n",
     "    idx_str = str(idx)\n",
@@ -105,20 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f8464808",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Activities so far: 2 (371444)\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for idx in np.arange(371443, 371445): \n",
+    "for idx in np.arange(100000, 500000): \n",
     "    idx_str = str(idx)\n",
     "    portal_page = requests.get(baseURL_activity+idx_str)\n",
     "    if portal_page.ok:\n",
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "75b87eda",
    "metadata": {},
    "outputs": [],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3193e1fa",
    "metadata": {},
    "outputs": [],
@@ -164,21 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "961c72ea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['371443', '371444']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "inv_act"
    ]
@@ -193,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a03d61a4",
    "metadata": {},
    "outputs": [],
@@ -217,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8c5c5f90",
    "metadata": {},
    "outputs": [],
@@ -228,6 +219,14 @@
     "\n",
     "# Dataset researcherID - publicationID\n",
     "inv_pub = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d138eff0",
+   "metadata": {},
+   "source": [
+    "## Researchers' information"
    ]
   },
   {
@@ -302,55 +301,27 @@
     "    \n",
     "    # Conditional check and savings (Periodic backups)\n",
     "    if not n%100:\n",
-    "        with open(relative_path + 'outputs/researchers.parquet', 'w') as f:\n",
-    "            parquet.dump(researchers, f, indent=4)\n",
+    "        with open(relative_path + 'outputs/researchers.json', 'w') as f:\n",
+    "            json.dump(researchers, f, indent=4)\n",
     "            \n",
-    "with open(relative_path + 'outputs/researchers.parquet', 'w') as f:\n",
-    "    parquet.dump(researchers, f, indent=4)"
+    "with open(relative_path + 'outputs/researchers.json', 'w') as f:\n",
+    "    json.dump(researchers, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0056f75",
+   "metadata": {},
+   "source": [
+    "## Publications' information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b38beb76",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Activity 1 out of 2\n",
-      "Resource ID:  371443\n",
-      "Title:  Extending the concurrency model of the real-time specification for Java\n",
-      "Publication Date:  September 2011\n",
-      "Publication Venue:  CONCURRENCY AND COMPUTATION-PRACTICE & EXPERIENCE\n",
-      "DOI: https://doi.org/10.1002/cpe.1675\n",
-      "Abstract:  The current RTSJ (Real-Time Specification for Java) threading model is dualized: a programmer has to decide between the high predictability offered by the region-based model and the flexibility offered by the garbage collection. So far, there is no unique type of thread which offers both the high predictability of a non-heap thread and the flexibility of a real-time thread in a single entity. Furthermore, this lack has a serious impact on the programmer who has to deal with new and sometimes non-trivial to use mechanisms, such as specific queues of objects or new types of threads, in order to avoid the priority inversion caused by the garbage collector. In order to tackle the concern properly and provide an improved and more generalized programming model, the authors propose a simple extension to the current threading model named RealtimeThread++, in an attempt to introduce more flexibility in the RTSJ concurrency model. The paper describes the extension from several points of view: (i) the programmer, identifying scenarios that may benefit from it significantly; (ii) the real-time Java technology perspective, identifying changes required in the current real-time virtual machine to support it; and (iii) the accumulated experience, relating empirical results obtained from a software prototype that supports the extension.\n",
-      "Keywords List:  []\n",
-      "Research Areas:  []\n",
-      "Author:  BASANTA VAL, PABLO with order: 1\n",
-      "Author:  GARCIA VALLS, MARIA SOLEDAD with order: 2\n",
-      "Author:  ESTEVEZ AYRES, IRIA MANUELA with order: 3\n",
-      "Valid Researchers IDs:  ['21578']\n",
-      "\n",
-      "Activity 2 out of 2\n",
-      "Resource ID:  371444\n",
-      "Title:  An OCL-Based approach to derive constraint test cases for database applications\n",
-      "Publication Date:  September 2011\n",
-      "Publication Venue:  INTERNATIONAL JOURNAL OF SOFTWARE ENGINEERING AND KNOWLEDGE ENGINEERING\n",
-      "DOI: \n",
-      "Abstract:  Abstract: The development of database applications in most CASE tools has been insufficient because most of these tools do not provide the software necessary to validate these appli-cations. Validation means ensuring whether a given application fulfils the user require-ments. We suggest validation of database applications by using the functional testing technique, which is a fundamental black-box testing technique for checking the software without being concerned about its implementation and structure. Our main contribu-tion to this work is in providing a MDA approach for deriving testing software from the OCL specification of the integrity constraints. This testing software is used to validate the database applications, which are used to enforce these constraints. The generated testing software includes three components: validation queries, test cases and initial data inserted before the testing process. Our approach is implemented as an add-in tool in Rational Rose called OCL2TestSW.\n",
-      "Keywords List:  ['functional testing software', 'software validation', 'equivalence class testing', 'mda', 'case tools']\n",
-      "Research Areas:  ['Computer Science']\n",
-      "Author:  CUADRA FERNANDEZ, MARIA DOLORES with order: 1\n",
-      "Author:  ABDULLA JASSIM, HARITH AL JUMAILY with order: 2\n",
-      "Author:  CASTRO GALAN, ELENA with order: 3\n",
-      "Author:  VELASCO DE DIEGO, MANUEL with order: 4\n",
-      "Valid Researchers IDs:  ['35641', '18070']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Access each url given the ID\n",
     "for n, inv in enumerate(inv_act):\n",
@@ -367,56 +338,56 @@
     "    try:\n",
     "        if section in valid_sections:\n",
     "            resID = inv\n",
-    "            print(\"Resource ID: \", resID)\n",
+    "            # print(\"Resource ID: \", resID)\n",
     "            \n",
     "            # Title of the activity\n",
     "            title = driver.find_element(By.CLASS_NAME, 'fn').text\n",
     "            for section_name in valid_sections:\n",
     "                if title.endswith(section_name):\n",
     "                    title = title.rsplit(section_name, 1)[0].strip()\n",
-    "                    print(\"Title: \", title)\n",
+    "                    # print(\"Title: \", title)\n",
     "                    break  \n",
     "                    \n",
     "            # Publication date\n",
     "            try:         \n",
     "                publication_date = driver.find_element(By.XPATH, '//h3[@id=\"dateTimeValue\"]/following-sibling::ul/li').text.strip()\n",
-    "                print(\"Publication Date: \", publication_date)\n",
+    "                # print(\"Publication Date: \", publication_date)\n",
     "            except:\n",
     "                publication_date = \"\"\n",
-    "                print(\"Publication Date: \", publication_date)\n",
+    "                # print(\"Publication Date: \", publication_date)\n",
     "\n",
     "                \n",
     "            # Publisher/magazine\n",
     "            try: \n",
     "                if section == \"Articles\":\n",
     "                    publication_venue = driver.find_element(By.XPATH, '//h3[@id=\"hasPublicationVenue\"]/following-sibling::ul/li/a').text.strip()\n",
-    "                    print(\"Publication Venue: \", publication_venue)\n",
+    "                    # print(\"Publication Venue: \", publication_venue)\n",
     "                    \n",
     "                elif section in [\"Book Chapters\", \"Conference Contributions\", \"Working Papers\"]:\n",
     "                    publication_venue = driver.find_element(By.XPATH, '//h3[@id=\"publisher\"]/following-sibling::ul/li/a').text.strip()\n",
-    "                    print(\"Publisher:\", publication_venue)\n",
+    "                    # print(\"Publisher:\", publication_venue)\n",
     "                    \n",
     "            except:\n",
     "                publication_venue = \"\"\n",
-    "                print(\"Publisher:\", publication_venue)\n",
+    "                # print(\"Publisher:\", publication_venue)\n",
     "\n",
     "                    \n",
     "            # DOI number\n",
     "            try: \n",
     "                doi = driver.find_element(By.XPATH, '//h3[@id=\"doi\"]/following-sibling::ul/li/a').text.strip()\n",
-    "                print(\"DOI:\", doi)\n",
+    "                # print(\"DOI:\", doi)\n",
     "            except: \n",
     "                doi = \"\"\n",
-    "                print(\"DOI:\", doi)\n",
+    "                # print(\"DOI:\", doi)\n",
     "\n",
     "                \n",
     "            # Abstract\n",
     "            try:\n",
     "                abstract = driver.find_element(By.XPATH, '//h3[@id=\"abstract\"]/following-sibling::ul/li').text.strip()\n",
-    "                print(\"Abstract: \", abstract)\n",
+    "                # print(\"Abstract: \", abstract)\n",
     "            except:\n",
     "                abstract = \"\"\n",
-    "                print(\"Abstract: \", abstract)\n",
+    "                # print(\"Abstract: \", abstract)\n",
     "\n",
     "\n",
     "                \n",
@@ -429,20 +400,20 @@
     "\n",
     "                # Split each resulting keyword using semicolons\n",
     "                keywords_list = [keyword.strip() for keyword_with_semicolon in keywords_split_by_comma for keyword in keyword_with_semicolon.split(';')]\n",
-    "                print(\"Keywords List: \", keywords_list)\n",
+    "                # print(\"Keywords List: \", keywords_list)\n",
     "            except:\n",
     "                keywords_list = []\n",
-    "                print(\"Keywords List: \", keywords_list)\n",
+    "                # print(\"Keywords List: \", keywords_list)\n",
     "\n",
     "                \n",
     "            # Research Areas\n",
     "            try: \n",
     "                research_areas = driver.find_elements(By.XPATH, '//h3[@id=\"hasResearchArea\"]/following-sibling::ul/li')\n",
     "                research_areas = [element.text.strip() for element in research_areas]\n",
-    "                print(\"Research Areas: \", research_areas)\n",
+    "                # print(\"Research Areas: \", research_areas)\n",
     "            except:\n",
     "                research_areas = []\n",
-    "                print(\"Research Areas: \", research_areas)\n",
+    "                # print(\"Research Areas: \", research_areas)\n",
     "\n",
     "            \n",
     "            # Authors IDs (if there is any ID)\n",
@@ -460,7 +431,7 @@
     "\n",
     "                for author_order, author_item in enumerate(author_items, start=1):\n",
     "                    author_name = author_item.text.strip()\n",
-    "                    print(\"Author: \", author_name, \"with order:\", author_order)\n",
+    "                    # print(\"Author: \", author_name, \"with order:\", author_order)\n",
     "                    href_attribute = author_item.find_elements(By.XPATH, 'a')\n",
     "                    \n",
     "                    for invID in href_attribute:\n",
@@ -469,7 +440,7 @@
     "\n",
     "                        inv_pub.append({'invID': invID, 'pubID': resID, 'orderID': author_order})\n",
     "        \n",
-    "                print(\"Valid Researchers IDs: \", author_ids)\n",
+    "                # print(\"Valid Researchers IDs: \", author_ids)\n",
     "\n",
     "            except:\n",
     "                author_ids = []\n",
@@ -480,15 +451,15 @@
     "        pass\n",
     "    \n",
     "    if not n%100:\n",
-    "        with open(relative_path + 'outputs/publications.parquet', 'w') as f:\n",
+    "        with open(relative_path + 'outputs/publications.json', 'w') as f:\n",
     "            json.dump(publications, f, indent=4)\n",
-    "        with open(relative_path + 'outputs/inv_pub.parquet', 'w') as f:\n",
+    "        with open(relative_path + 'outputs/inv_pub.json', 'w') as f:\n",
     "            json.dump(inv_pub, f, indent=4)\n",
     "            \n",
-    "with open(relative_path + 'outputs/publications.parquet', 'w') as f:\n",
-    "    parquet.dump(publications, f, indent=4)\n",
-    "with open(relative_path + 'outputs/inv_pub.parquet', 'w') as f:\n",
-    "    parquet.dump(inv_pub, f, indent=4)"
+    "with open(relative_path + 'outputs/publications.json', 'w') as f:\n",
+    "    json.dump(publications, f, indent=4)\n",
+    "with open(relative_path + 'outputs/inv_pub.json', 'w') as f:\n",
+    "    json.dump(inv_pub, f, indent=4)"
    ]
   },
   {
