--- a/Horizon Work Programmes/ingesta.ipynb
+++ b/Horizon Work Programmes/ingesta.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8b8ede8d",
    "metadata": {
     "id": "8b8ede8d"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "DL76-WMy0orv",
    "metadata": {
     "id": "DL76-WMy0orv"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "id": "pV4gJe_y2YIJ",
    "metadata": {
     "id": "pV4gJe_y2YIJ"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 126,
    "id": "AIiM45gm58e0",
    "metadata": {
     "id": "AIiM45gm58e0"
@@ -174,7 +174,17 @@
     "\n",
     "        sections = {}\n",
     "        lines = text.split(\"\\n\")\n",
+    "        \n",
     "\n",
+    "        # get the title\n",
+    "        try:\n",
+    "            title_index = lines.index(\"Specific conditions\")\n",
+    "            title_list = lines[:title_index]\n",
+    "            title = ''.join(title_list)\n",
+    "            title = title.split(': ')[1]\n",
+    "        except:\n",
+    "            title = ''\n",
+    "            \n",
     "        for i, line in enumerate(lines): # iterate through all the lines of the texts\n",
     "          # Get budget text\n",
     "          if (init_budget in line):\n",
@@ -225,13 +235,14 @@
     "        else:\n",
     "            budget = \"\".join(budget)\n",
     "\n",
-    "        # store all the information ina  dictionary and create a dataset\n",
+    "        # store all the information in a  dictionary and create a dataset\n",
     "        sections[\"Work Programme\"] = programme\n",
     "        sections[\"Call\"] = call\n",
     "        sections[\"Budget\"] =  budget\n",
     "        sections[\"Type of Action\"] = \"\".join(action)\n",
     "        sections[\"Expected Outcome\"] = \"\".join(outcome).replace(\"Expected Outcome: \", \"\")\n",
     "        sections[\"Scope\"] = \"\".join(scope).replace(\"Scope: \", \"\")\n",
+    "        sections['Title'] = title\n",
     "        sections = pd.DataFrame([sections])\n",
     "\n",
     "        df_call = pd.concat([df_call, sections], ignore_index=True)\n",
@@ -269,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 124,
    "id": "ba34111a",
    "metadata": {
     "id": "ba34111a"
@@ -299,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 127,
    "id": "d38385fb",
    "metadata": {
     "id": "d38385fb"
@@ -332,6 +343,7 @@
        "      <th>Type of Action</th>\n",
        "      <th>Expected Outcome</th>\n",
        "      <th>Scope</th>\n",
+       "      <th>Title</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -343,6 +355,7 @@
        "      <td>Research and Innovation Actions</td>\n",
        "      <td>In line with the European Green Deal and in pa...</td>\n",
        "      <td>According to IPBES global assessment report, p...</td>\n",
+       "      <td>Better understanding of routes of exposure and...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -352,6 +365,7 @@
        "      <td>Research and Innovation Actions</td>\n",
        "      <td>In line with the European Green Deal and in pa...</td>\n",
        "      <td>Scope:Light pollutionis the alteration of natu...</td>\n",
+       "      <td>Impact of light and noise pollution on biodive...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -361,6 +375,7 @@
        "      <td>Research and Innovation Actions</td>\n",
        "      <td>The expected outcomes should feed in the imple...</td>\n",
        "      <td>Scope:These activities will foster a collecti...</td>\n",
+       "      <td>Interdisciplinary assessment of changes affect...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -370,6 +385,7 @@
        "      <td>Research and Innovation Actions</td>\n",
        "      <td>In line with the objectives of the European Gr...</td>\n",
        "      <td>Proposals should address Area A or Area B as f...</td>\n",
+       "      <td>Nature protection</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -379,9 +395,11 @@
        "      <td>Research and Innovation Actions</td>\n",
        "      <td>In line with the European Green Deal and in pa...</td>\n",
        "      <td>Proposals should work in one or more European ...</td>\n",
+       "      <td>Understanding and reducing bycatch of protecte...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -397,6 +415,7 @@
        "      <td>Coordination and Support Actions</td>\n",
        "      <td>In support of the European Green Deal, the EU ...</td>\n",
        "      <td>Proposals should address the following activit...</td>\n",
+       "      <td>Thematic networks to compile and share knowled...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>172</th>\n",
@@ -406,6 +425,7 @@
        "      <td>Coordination and Support Actions</td>\n",
        "      <td>Successful proposals will support the objectiv...</td>\n",
        "      <td>Transformative changes, such as the ones calle...</td>\n",
+       "      <td>Organic farming thematic networks to compile a...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>173</th>\n",
@@ -415,6 +435,7 @@
        "      <td>Coordination and Support Actions</td>\n",
        "      <td>In support of the European Green Deal, the EU ...</td>\n",
        "      <td>Proposals should address the following activit...</td>\n",
+       "      <td>Biodiversity thematic networks to compile and ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>174</th>\n",
@@ -424,6 +445,7 @@
        "      <td>Coordination and Support Actions</td>\n",
        "      <td>In support of the European Green Deal, the EU ...</td>\n",
        "      <td>Proposals should address the following activit...</td>\n",
+       "      <td>Developing EU advisory networks on forestry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>175</th>\n",
@@ -433,10 +455,11 @@
        "      <td>Coordination and Support Actions</td>\n",
        "      <td>In support of the European Green Deal, organic...</td>\n",
        "      <td>Proposals should address the following activit...</td>\n",
+       "      <td>Developing EU advisory networks on sustainable...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>176 rows × 6 columns</p>\n",
+       "<p>176 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -479,23 +502,36 @@
        "174  In support of the European Green Deal, the EU ...   \n",
        "175  In support of the European Green Deal, organic...   \n",
        "\n",
-       "                                                 Scope  \n",
-       "0    According to IPBES global assessment report, p...  \n",
-       "1    Scope:Light pollutionis the alteration of natu...  \n",
-       "2    Scope:These activities will foster a collecti...  \n",
-       "3    Proposals should address Area A or Area B as f...  \n",
-       "4    Proposals should work in one or more European ...  \n",
-       "..                                                 ...  \n",
-       "171  Proposals should address the following activit...  \n",
-       "172  Transformative changes, such as the ones calle...  \n",
-       "173  Proposals should address the following activit...  \n",
-       "174  Proposals should address the following activit...  \n",
-       "175  Proposals should address the following activit...  \n",
+       "                                                 Scope  \\\n",
+       "0    According to IPBES global assessment report, p...   \n",
+       "1    Scope:Light pollutionis the alteration of natu...   \n",
+       "2    Scope:These activities will foster a collecti...   \n",
+       "3    Proposals should address Area A or Area B as f...   \n",
+       "4    Proposals should work in one or more European ...   \n",
+       "..                                                 ...   \n",
+       "171  Proposals should address the following activit...   \n",
+       "172  Transformative changes, such as the ones calle...   \n",
+       "173  Proposals should address the following activit...   \n",
+       "174  Proposals should address the following activit...   \n",
+       "175  Proposals should address the following activit...   \n",
        "\n",
-       "[176 rows x 6 columns]"
+       "                                                 Title  \n",
+       "0    Better understanding of routes of exposure and...  \n",
+       "1    Impact of light and noise pollution on biodive...  \n",
+       "2    Interdisciplinary assessment of changes affect...  \n",
+       "3                                    Nature protection  \n",
+       "4    Understanding and reducing bycatch of protecte...  \n",
+       "..                                                 ...  \n",
+       "171  Thematic networks to compile and share knowled...  \n",
+       "172  Organic farming thematic networks to compile a...  \n",
+       "173  Biodiversity thematic networks to compile and ...  \n",
+       "174       Developing EU advisory networks on forestry   \n",
+       "175  Developing EU advisory networks on sustainable...  \n",
+       "\n",
+       "[176 rows x 7 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
